==> Sirokujira/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/RX63N/DeviceCode/RX63N_USART/RX63N_USART.cpp <==
#include <tinyhal.h>
#include "..\iodefine.h"
#include "..\RX63N.h"
#define TX_USART_BUFFER_SIZE    PLATFORM_DEPENDENT_TX_USART_BUFFER_SIZE
#define TX_USART_BUFFER_SIZE    512
#define RX_USART_BUFFER_SIZE    PLATFORM_DEPENDENT_RX_USART_BUFFER_SIZE
#define RX_USART_BUFFER_SIZE    1024
#define SCR_CKE_M   (1 << 0)
#define SCR_TEIE_M  (1 << 2)
#define SCR_MPIE_M  (1 << 3)
#define SCR_RE_M    (1 << 4)
#define SCR_TE_M    (1 << 5)
#define SCR_RIE_M   (1 << 6)
#define SCR_TIE_M   (1 << 7)
#define USART_PRIORITY    12
#define STBCR4    *((volatile unsigned char *)(0xFFFE040C))

BOOL CPU_USART_Initialize(int ComPortNum, int BaudRate, int Parity, int DataBits, int StopBits, int FlowValue)
{
    unsigned char scsmr = 0;
    volatile struct st_sci0 *sci = SCI[ComPortNum];

    if (Parity == USART_PARITY_NONE)
        scsmr = 0;
    else if (Parity == USART_PARITY_ODD)
        scsmr = (1 << 5)  | (1 << 4);
    else if (Parity == USART_PARITY_EVEN)
        scsmr = (1 << 5);
    else return FALSE;

    if (DataBits == 7)
        scsmr |= (1 << 6);
    if (StopBits == USART_STOP_BITS_TWO)
        scsmr |= (1 << 3);

    if (ComPortNum == 0) {
        SYSTEM.PRCR.WORD = 0xA502;
        MSTP_SCI0 = 0;
        SYSTEM.PRCR.WORD = 0xA500;
        MPC.PWPR.BIT.B0WI = 0;      /* Enable write to PFSWE */
        MPC.PWPR.BIT.PFSWE = 1;     /* Enable write to PFS */
        MPC.P20PFS.BYTE = 0x0A;
        MPC.P21PFS.BYTE = 0x0A;
        MPC.PWPR.BYTE = 0x80;       /* Disable write to PFSWE and PFS*/
        PORT2.PMR.BIT.B0 = 1;
        PORT2.PMR.BIT.B1 = 1;
        IPR(SCI0, RXI0) = USART_PRIORITY;
        IPR(SCI0, TXI0) = USART_PRIORITY;
        IEN(SCI0, RXI0) = 1;
        IEN(SCI0, TXI0) = 1;
    } else if (ComPortNum == 1) {
        SYSTEM.PRCR.WORD = 0xA502;
        MSTP_SCI1 = 0;
        SYSTEM.PRCR.WORD = 0xA500;
        MPC.PWPR.BIT.B0WI = 0;      /* Enable write to PFSWE */
        MPC.PWPR.BIT.PFSWE = 1;     /* Enable write to PFS */
        MPC.P15PFS.BYTE = 0x0A;     // RXD1
        MPC.P16PFS.BYTE = 0x0A;     // TXD1
        MPC.PWPR.BYTE = 0x80;       /* Disable write to PFSWE and PFS*/
        PORT1.PMR.BIT.B5 = 1;
        PORT1.PMR.BIT.B6 = 1;
        IPR(SCI1, RXI1) = USART_PRIORITY;
        IPR(SCI1, TXI1) = USART_PRIORITY;
        IEN(SCI1, RXI1) = 1;
        IEN(SCI1, TXI1) = 1;
    } else if (ComPortNum == 2) {
        SYSTEM.PRCR.WORD = 0xA502;
        MSTP_SCI2 = 0;
        SYSTEM.PRCR.WORD = 0xA500;
        MPC.PWPR.BIT.B0WI = 0;      /* Enable write to PFSWE */
        MPC.PWPR.BIT.PFSWE = 1;     /* Enable write to PFS */
        MPC.P12PFS.BYTE = 0x0A;     // RXD2
        MPC.P13PFS.BYTE = 0x0A;     // TDX2
        MPC.PWPR.BYTE = 0x80;       /* Disable write to PFSWE and PFS*/
        PORT1.PMR.BIT.B2 = 1;
        PORT1.PMR.BIT.B3 = 1;
        IPR(SCI2, RXI2) = USART_PRIORITY;
        IPR(SCI2, TXI2) = USART_PRIORITY;
        IEN(SCI2, RXI2) = 1;
        IEN(SCI2, TXI2) = 1;
    } else if (ComPortNum == 3) {
        SYSTEM.PRCR.WORD = 0xA502;
        MSTP_SCI3 = 0;
        SYSTEM.PRCR.WORD = 0xA500;
        MPC.PWPR.BIT.B0WI = 0;      /* Enable write to PFSWE */
        MPC.PWPR.BIT.PFSWE = 1;     /* Enable write to PFS */
        MPC.P23PFS.BYTE = 0x0A;     // TXD3
        MPC.P25PFS.BYTE = 0x0A;     // RXD3
        MPC.PWPR.BYTE = 0x80;       /* Disable write to PFSWE and PFS*/
        PORT2.PMR.BIT.B3 = 1;
        PORT2.PMR.BIT.B5 = 1;
        IPR(SCI3, RXI3) = USART_PRIORITY;
        IPR(SCI3, TXI3) = USART_PRIORITY;
        IEN(SCI3, RXI3) = 1;
        IEN(SCI3, TXI3) = 1;
    } else
        return FALSE;
    sci->SCR.BYTE = 0;
    sci->SMR.BYTE = scsmr;
    sci->BRR = (48000000 / 32 / BaudRate) - 1;
    sci->SCR.BYTE = (SCR_RE_M | SCR_RIE_M);
    return TRUE;
}

BOOL CPU_USART_Uninitialize(int ComPortNum)
{
    volatile struct st_sci0 *sci = SCI[ComPortNum];
    sci->SCR.BYTE = 0;
    switch (ComPortNum)
    {
        case 0:
            SYSTEM.PRCR.WORD = 0xA502;
            MSTP_SCI0 = 0;
            SYSTEM.PRCR.WORD = 0xA500;
            IEN(SCI0, RXI0) = 0;
            IEN(SCI0, TXI0) = 0;
            break;
        case 1:
            SYSTEM.PRCR.WORD = 0xA502;
            MSTP_SCI1 = 0;
            SYSTEM.PRCR.WORD = 0xA500;
            IEN(SCI1, RXI1) = 0;
            IEN(SCI1, TXI1) = 0;
            break;
        case 2:
            SYSTEM.PRCR.WORD = 0xA502;
            MSTP_SCI2 = 0;
            SYSTEM.PRCR.WORD = 0xA500;
            IEN(SCI2, RXI2) = 0;
            IEN(SCI2, TXI2) = 0;
            break;
        case 3:
            SYSTEM.PRCR.WORD = 0xA502;
            MSTP_SCI3 = 0;
            SYSTEM.PRCR.WORD = 0xA500;
            IEN(SCI3, RXI3) = 0;
            IEN(SCI3, TXI3) = 0;
            break;
        default:
            return FALSE;
    }
    return TRUE;
}

BOOL CPU_USART_TxBufferEmpty(int ComPortNum)
{
    return ((*SCI[ComPortNum]).SSR.BIT.TEND != 0);
}

void CPU_USART_WriteCharToTxBuffer(int ComPortNum, UINT8 c)
{
    while (FALSE == CPU_USART_TxShiftRegisterEmpty(ComPortNum));
    (*SCI[ComPortNum]).TDR = c;
}

void CPU_USART_TxBufferEmptyInterruptEnable(int ComPortNum, BOOL Enable)
{
    while (FALSE == CPU_USART_TxShiftRegisterEmpty(ComPortNum));
    if (Enable)
        (*SCI[ComPortNum]).SCR.BYTE |= (SCR_TE_M | SCR_TIE_M);
    else
        (*SCI[ComPortNum]).SCR.BYTE &=  ~(SCR_TE_M | SCR_TIE_M);
#if 0
    UINT8 bit = Enable ? 1:0;
    switch (ComPortNum)
    {
        case 0:
            IEN(SCI0, TXI0) = bit;
            break;
        case 1:
            IEN(SCI1, TXI1) = bit;
            break;
        case 2:
            IEN(SCI2, TXI2) = bit;
            break;
        case 3:
            IEN(SCI3, TXI3) = bit;
            break;
    }
#endif
}

BOOL CPU_USART_TxBufferEmptyInterruptState(int ComPortNum)
{
    return ((*SCI[ComPortNum]).SCR.BIT.TIE != 0);
}

void CPU_USART_RxBufferFullInterruptEnable(int ComPortNum, BOOL Enable)
{
    if (Enable)
        (*SCI[ComPortNum]).SCR.BIT.RIE = 1;
    else
        (*SCI[ComPortNum]).SCR.BIT.RIE = 0;
#if 0
    UINT8 bit = Enable ? 1:0;
    switch (ComPortNum)
    {
        case 0:
            IEN(SCI0, RXI0) = bit;
            break;
        case 1:
            IEN(SCI1, RXI1) = bit;
            break;
        case 2:
            IEN(SCI2, RXI2) = bit;
            break;
        case 3:
            IEN(SCI3, RXI3) = bit;
            break;
    }
#endif
}

BOOL CPU_USART_RxBufferFullInterruptState(int ComPortNum)
{
    return ((*SCI[ComPortNum]).SCR.BIT.RIE != 0);
}

static void USART_RxISR(UINT32 port)
{
    char c;
    GLOBAL_LOCK(irq);
    c = (*SCI[port]).RDR;
    USART_AddCharToRxBuffer(port, c);
}
