==> Sirokujira/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/MBED/DeviceCode/MBED_USART/MBED_USART.cpp <==
#include <tinyhal.h>
#include "mbed.h"
#include "SerialBase.h"
#include "mbed_assert.h"
#include "serial_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include "gpio_api.h"
#include "scif_iodefine.h"
#include "cpg_iodefine.h"
#define UART_MAX    12
#define UART_NUM    8
#define IRQ_NUM     2

BOOL CPU_USART_Initialize(int ComPortNum, int BaudRate, int Parity, int DataBits, int StopBits, int FlowValue)
{
    serial_t *obj = &usart_obj[ComPortNum];
    PinName tx = PinMap_UART_TX[ComPortNum].pin;
    PinName rx = PinMap_UART_RX[ComPortNum].pin;
    volatile uint8_t dummy ;
    int is_stdio_uart = 0;
    // determine the UART to use
    uint32_t uart_tx = pinmap_peripheral(tx, PinMap_UART_TX);
    uint32_t uart_rx = pinmap_peripheral(rx, PinMap_UART_RX);
    uint32_t uart = pinmap_merge(uart_tx, uart_rx);

    //MBED_ASSERT((int)uart != NC);

    __disable_irq();
    obj->uart = (struct st_scif *)SCIF[uart];
    // enable power
    switch (uart) {
        case UART0: CPG.STBCR4 &= ~(1 <<  7); break;
        case UART1: CPG.STBCR4 &= ~(1 <<  6); break;
        case UART2: CPG.STBCR4 &= ~(1 <<  5); break;
        case UART3: CPG.STBCR4 &= ~(1 <<  4); break;
        case UART4: CPG.STBCR4 &= ~(1 <<  3); break;
        case UART5: CPG.STBCR4 &= ~(1 <<  2); break;
        case UART6: CPG.STBCR4 &= ~(1 <<  1); break;
        case UART7: CPG.STBCR4 &= ~(1 <<  0); break;
    }
    dummy = CPG.STBCR4;

    /* ==== SCIF initial setting ==== */
    /* ---- Serial control register (SCSCR) setting ---- */
    /* B'00 : Internal CLK */
    obj->uart->SCSCR = 0x0000u;          /* SCIF transmitting and receiving operations stop */

    /* ---- FIFO control register (SCFCR) setting ---- */
    /* Transmit FIFO reset & Receive FIFO data register reset */
    obj->uart->SCFCR = 0x0006;

    /* ---- Serial status register (SCFSR) setting ---- */
    dummy = obj->uart->SCFSR;
    obj->uart->SCFSR = (dummy & 0xFF6Cu);         /* ER,BRK,DR bit clear */

    /* ---- Line status register (SCLSR) setting ---- */
    /* ORER bit clear */
    dummy = obj->uart->SCLSR;
    obj->uart->SCLSR = (dummy & 0x0001);

    /* ---- Serial extension mode register (SCEMR) setting ----
    b7 BGDM - Baud rate generator double-speed mode  : Normal mode
    b0 ABCS - Base clock select in asynchronous mode : Base clock is 16 times the bit rate */
    obj->uart->SCEMR = 0x0000u;

    /* ---- Bit rate register (SCBRR) setting ---- */
    usart_baud  (obj, BaudRate);
    usart_format(obj, 8, ParityNone, 1);

    /* ---- FIFO control register (SCFCR) setting ---- */
    //obj->uart->SCFCR = 0x0030u;
    obj->uart->SCFCR = 0x0030u;

    /* ---- Serial port register (SCSPTR) setting ----
    b1 SPB2IO - Serial port break output : disabled
    b0 SPB2DT - Serial port break data   : High-level */
    //obj->uart->SCSPTR |= 0x0000u;

    obj->uart->SCSCR = 0x00F0;

    // pinout the chosen uart
    pinmap_pinout(tx, PinMap_UART_TX);
    pinmap_pinout(rx, PinMap_UART_RX);

    switch (uart) {
        case UART0: obj->index = 0; break;
        case UART1: obj->index = 1; break;
        case UART2: obj->index = 2; break;
        case UART3: obj->index = 3; break;
        case UART4: obj->index = 4; break;
        case UART5: obj->index = 5; break;
        case UART6: obj->index = 6; break;
        case UART7: obj->index = 7; break;
    }
    uart_data[obj->index].sw_rts.pin = NC;
    uart_data[obj->index].sw_cts.pin = NC;

    is_stdio_uart = (uart == STDIO_UART) ? (1) : (0);

    if (is_stdio_uart) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
    usart_irq_set_internal(obj, RxIrq, 1, 11);
    usart_irq_set_internal(obj, TxIrq, 1, 11);
    __enable_irq();
    return TRUE;
}

BOOL CPU_USART_Uninitialize(int ComPortNum)
{
    serial_t *obj = &usart_obj[ComPortNum];
#if 0
    __disable_irq();
    usart_irq_set_internal(obj, RxIrq, 0, 11);
    usart_irq_set_internal(obj, TxIrq, 0, 11);
    uart_data[obj->index].usart_irq_id = 0;
    __enable_irq();
#endif
    return TRUE;
}

BOOL CPU_USART_TxBufferEmpty(int ComPortNum)
{
    serial_t *obj = &usart_obj[ComPortNum];
    return usart_writable(obj)? TRUE:FALSE;
}

void CPU_USART_WriteCharToTxBuffer(int ComPortNum, UINT8 c)
{
    serial_t *obj = &usart_obj[ComPortNum];
    while (FALSE == CPU_USART_TxShiftRegisterEmpty(ComPortNum));
    usart_putc(obj, (int)c);
}

void CPU_USART_TxBufferEmptyInterruptEnable(int ComPortNum, BOOL Enable)
{
    serial_t *obj = &usart_obj[ComPortNum];
    serial_tx_int_enable(obj, (int)Enable);
}

BOOL CPU_USART_TxBufferEmptyInterruptState(int ComPortNum)
{
    serial_t *obj = &usart_obj[ComPortNum];
    return serial_tx_int_state(obj);
}

void CPU_USART_RxBufferFullInterruptEnable(int ComPortNum, BOOL Enable)
{
    serial_t *obj = &usart_obj[ComPortNum];
    usart_rx_int_enable(obj, (int)Enable);
}

BOOL CPU_USART_RxBufferFullInterruptState(int ComPortNum)
{
    serial_t *obj = &usart_obj[ComPortNum];
    return usart_rx_int_state(obj);
}

static void USART_RxISR(UINT32 port)
{
    char c;
    serial_t *obj = &usart_obj[port];
    GLOBAL_LOCK(irq);
    if (usart_readable(obj)) {
        c = (char)usart_getc(obj);
        USART_AddCharToRxBuffer(port, c);
    }
}
